...
    <string name="feedback_thank_you_for_trying_message">Thank you for trying %1$s! We\'re here to help.</string>
    <string name="your_message">Your message</string>
    <string name="see_more_backup_options">See more backup options</string>
    <string name="there_are_no_backups_on_this_account"><b>There are no backups on this account</b>\n\n If you lose your device, or it stops working, your encrypted email will be unreadable.</string>
    <string name="email" translatable="false">Email</string>
    <string name="download">Download</string>
    <string name="backup_as_a_file">backup as a file</string>
    <string name="backup_as_email">backup as email</string>
    <string name="backup_as_download_hint">This will download your key(s) as a file. Very secure option if your device
        is encrypted, or if you can keep a file stored securely. If you lose both your device and the file, your encrypted email will be unreadable, so you need to keep this file in a safe place.</string>
    <string name="backup_as_email_hint">This will back up private key(s) in your Email Inbox. The security depends on
        the strength of your pass phrase, which should be very long and hard to guess. Best option for most users.</string>
    <string name="backups_found">Backups found: %1$d.\n\n Your account is backed up correctly in your Email Inbox.</string>
    <string name="your_key_backup">Your %1$s Backup</string>
    <string name="backed_up_successfully">Backed up successfully</string>
    <string name="backup_was_not_sent">Error backing up, please try again</string>
    <string name="message_was_deleted">The message was deleted</string>
    <string name="message_was_deleted_or_labels_changed">The message was deleted or labels changed</string>
    <string name="retry">Retry</string>
    <string name="warning">Warning</string>
    <string name="no_connection">No connection</string>
...
    <string name="no_key_available_for_your_emails">No keys available for your email addresses %1$s and %2$s. Please write %3$s for help.</string>
    <string name="pass_phrase_changed">Pass phrase successfully changed.</string>
    <string name="please_wait_while_pass_phrase_will_be_changed">Changing a pass phrase, please wait</string>
    <string name="backup_options">Backup options</string>
    <string name="change_pass_phrase">Change pass phrase</string>
    <string name="account_has_no_associated_keys">This account has no associated keys. Write us at %1$s</string>
    <string name="pass_phrase_is_too_weak">Your pass phrase is too weak</string>
    <string name="fix">fix</string>
    <string name="different_pass_phrases">Your private keys have different pass phrases</string>
    <plurals name="file_contains_some_amount_of_keys">
        <item quantity="one">[%1$s]</item>
        <item quantity="other">[%1$s] contains %2$d keys</item>
    </plurals>
...
    <string name="sending">Sending&#8230;</string>
    <string name="queued">Queued</string>
    <string name="cache_error">Can\'t send message: cache problem</string>
    <string name="can_not_delete_sending_message">You can\'t delete a message which is now being sent</string>
    <string name="preparing">Preparing&#8230;</string>
    <string name="back_up_my_key">Back up my key</string>
    <string name="there_are_no_private_keys">There are no imported private keys for %1$s</string>
    <string name="original_message_missing">Could not forward: original message missing</string>
    <string name="original_attachment_not_found">Could not forward: some attachments are not available</string>
    <string name="could_not_create">Could not create: click to see details</string>
    <string name="could_not_create_no_key_available">Could not create: no key available</string>
    <string name="message_failed_to_forward">Message failed to send. Please forward the message again</string>
    <string name="there_is_problem_with_cache">There is a problem with a temp cache directory. Please create the message again</string>
...
